Fix PlayerList overflow issue

--- a/src/components/playerList/playerList.module.scss
+++ b/src/components/playerList/playerList.module.scss
@@ -1,16 +1,25 @@
 @import "../../style/variables.scss";
 
 .playerList {
-  ul {
-    height: 100%;
-    list-style: none;
-    overflow-y: scroll;
-    background-color: $light-gray;
-    border-radius: $border-radius;
-    padding: 0.75rem;
-    li {
-      color: rgb(255, 255, 255);
-      font-size: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  .nameListWrapper {
+    position: relative;
+    ul {
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      list-style: none;
+      overflow-y: scroll;
+      background-color: $light-gray;
+      border-radius: $border-radius;
+      padding: 0.75rem;
+      li {
+        color: rgb(255, 255, 255);
+        font-size: 1.25rem;
+      }
     }
   }
   button {
